--- a/app/templates/add_token.html
+++ b/app/templates/add_token.html
@@ -7,7 +7,7 @@
     <div class="col-md-8 col-lg-6">
         <div class="card">
             <div class="card-header">
-                <h5 class="mb-0"><i class="fas fa-plus me-2"></i>Add New OAuth2 Token</h5>
+                <h5 class="mb-0">Add New OAuth2 Token</h5>
             </div>
             <div class="card-body">
                 <form method="post" action="/oauth/add-token">
@@ -70,7 +70,7 @@
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                         <a href="/oauth/" class="btn btn-secondary me-md-2">Cancel</a>
                         <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-save me-1"></i>Save Token
+                            Save Token
                         </button>
                     </div>
                 </form>
@@ -80,14 +80,14 @@
         <!-- Help Section -->
         <div class="card mt-4">
             <div class="card-header">
-                <h6 class="mb-0"><i class="fas fa-question-circle me-2"></i>How to Get OAuth2 Tokens</h6>
+                <h6 class="mb-0">How to Get OAuth2 Tokens</h6>
             </div>
             <div class="card-body">
                 <div class="accordion" id="helpAccordion">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="githubHelp">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#githubHelpContent">
-                                <i class="fab fa-github me-2"></i>GitHub
+                                GitHub
                             </button>
                         </h2>
                         <div id="githubHelpContent" class="accordion-collapse collapse" data-bs-parent="#helpAccordion">
@@ -104,7 +104,7 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="googleHelp">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#googleHelpContent">
-                                <i class="fab fa-google me-2"></i>Google
+                                Google
                             </button>
                         </h2>
                         <div id="googleHelpContent" class="accordion-collapse collapse" data-bs-parent="#helpAccordion">
@@ -122,7 +122,7 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="microsoftHelp">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#microsoftHelpContent">
-                                <i class="fab fa-microsoft me-2"></i>Microsoft
+                                Microsoft
                             </button>
                         </h2>
                         <div id="microsoftHelpContent" class="accordion-collapse collapse" data-bs-parent="#helpAccordion">
