--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/oauth/">
-                <i class="fas fa-shield-alt me-2"></i>OAuth2 Token Manager
+                OAuth2 Token Manager
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -57,24 +57,24 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/oauth/">
-                            <i class="fas fa-home me-1"></i>Dashboard
+                            Dashboard
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/oauth/add-token">
-                            <i class="fas fa-plus me-1"></i>Add Token
+                            Add Token
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/oauth/password-entry">
-                            <i class="fas fa-key me-1"></i>Access Tokens
+                            Access Tokens
                         </a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                            <i class="fas fa-user me-1"></i>{{ user.username }}
+                            {{ user.username }}
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/users/me">Profile</a></li>
@@ -96,7 +96,6 @@
     <footer class="footer">
         <div class="container text-center">
             <p class="mb-0 text-muted">
-                <i class="fas fa-shield-alt me-1"></i>
                 Secure OAuth2 Token Management System
             </p>
         </div>
@@ -127,7 +126,7 @@
                 toast.innerHTML = `
                     <div class="d-flex">
                         <div class="toast-body">
-                            <i class="fas fa-check me-2"></i>Token copied to clipboard!
+                            Token copied to clipboard!
                         </div>
                         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
                     </div>
